<resources>
    <string name="app_name">Math Scratch Android</string>
    <string name="start_button">Begin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="difficulty">Difficulty </string>
    <string name="equation">equation</string>
    <string name="answer">Answer: </string>
    <string name="sorry_try_again">Sorry Try Again</string>
    <string name="new_sheet">New Sheet</string>
    <string name="load_sheet">Load Sheet</string>
    <string name="addition_subtraction_practice">Addition/Subtraction Practice</string>
    <string name="multiplication_practice">Multiplication Practice</string>
    <string name="multiplication_table_practice">Multiplication Table Practice</string>
    <string name="difficulty_easy">Cupcake</string>
    <string name="difficulty_hard">Tough Cookie</string>
    <string name="patreon_link"><a href="https://www.patreon.com/joemccully">My patreon: https://www.patreon.com/joemccully</a></string>
    <string name="math_fact_1">A googol is 10 to the power of 100</string>
</resources>
