<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.packages.joe.mathscratchandroid.MainActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/titleArt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/title_art_better" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleArt"
        android:id="@+id/centerDivider"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleArt"
        android:layout_toStartOf="@+id/centerDivider"
        android:text="@string/new_sheet"
        android:layout_marginEnd="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleArt"
        android:id="@+id/load"
        android:layout_toEndOf="@+id/centerDivider"
        android:layout_marginStart="10dp"


        android:text="@string/load_sheet"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patreon_link"
        android:id="@+id/patreonLink"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mathFact"
        android:text="@string/math_fact_1"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/patreonLink"
        android:textSize="20dp"
        android:layout_marginBottom="15dp"/>

</RelativeLayout>
